--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">FitNutriJournal</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_home">Home</string>
+    <string name="title_diet">Diet</string>
+    <string name="title_exercise">Exercise</string>
+    <string name="title_profile">Profile</string>
 </resources>
