Feat : Diet RecyclerView 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_diet">Diet</string>
     <string name="title_exercise">Exercise</string>
     <string name="title_profile">Profile</string>
+    <string name="favorite">Favorite</string>
 </resources>
