--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">FitNutriJournal</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_home">Home</string>
-    <string name="title_diet">Diet</string>
-    <string name="title_exercise">Exercise</string>
-    <string name="title_profile">Profile</string>
-    <string name="favorite">Favorite</string>
+    <string name="title_home">홈</string>
+    <string name="title_diet">음식 목록</string>
+    <string name="title_exercise">운동</string>
+    <string name="title_profile">내정보</string>
+    <string name="favorite">즐겨찾기</string>
 </resources>
