--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_home">홈</string>
     <string name="title_diet">음식 목록</string>
-    <string name="title_exercise">운동</string>
+    <string name="title_report">리포트</string>
     <string name="title_profile">내정보</string>
     <string name="favorite">즐겨찾기</string>
     <string name="delete">삭제</string>
