--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FitNutriJournal</string>
+    <string name="app_name">칼로리 매니저</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_home">홈</string>
