Feat : 음식 정렬 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,10 @@
     <string name="memo_hint">작성된 메모가 없습니다.</string>
     <string name="cameraInfo">사진을 찍어 식단을 업로드하세요</string>
 
-    <string name="bottom_sheet_addBreakfast">아침에 저장</string>
-    <string name="bottom_sheet_addLunch">점심에 저장</string>
-    <string name="bottom_sheet_addDinner">저녁에 저장</string>
-    <string name="bottom_sheet_addSnack">간식/기타에 저장</string>
+    <string name="bottom_sheet_addBreakfast">아침에 추가</string>
+    <string name="bottom_sheet_addLunch">점심에 추가</string>
+    <string name="bottom_sheet_addDinner">저녁에 추가</string>
+    <string name="bottom_sheet_addSnack">간식/기타에 추가</string>
 
     <string name="foodName_error">음식 이름을 입력해주세요.</string>
     <string name="servingSize_error">1회 제공량을 입력해주세요.</string>
@@ -38,4 +38,6 @@
     <string name="carbohydrate_error">탄수화물을 입력해주세요.</string>
     <string name="protein_error">단백질을 입력해주세요.</string>
     <string name="fat_error">지방을 입력해주세요.</string>
+    <string name="sort_ascending">오름차순 정렬</string>
+    <string name="sort_descending">내림차순 정렬</string>
 </resources>
