Feat : 사용자 설정 및 즐겨찾기 정렬

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="fat_error">지방을 입력해주세요.</string>
     <string name="sort_ascending">오름차순 정렬</string>
     <string name="sort_descending">내림차순 정렬</string>
+    <string name="servingSizeUpdate">제공량 업데이트</string>
+    <string name="addFood">음식 추가하기</string>
+    <string name="addToMeal">식사에 추가</string>
 </resources>
