--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,13 @@
     <string name="title_profile">내정보</string>
     <string name="favorite">즐겨찾기</string>
     <string name="delete">삭제</string>
+    <string name="edit">수정</string>
+    <string name="cancel">취소</string>
+    <string name="save">저장</string>
+    <string name="add">추가</string>
+    <string name="search">검색</string>
+    <string name="check">확인</string>
+    <string name="undo">실행취소</string>
 
     <string name="calories">칼로리</string>
     <string name="carbohydrate">탄수화물</string>
@@ -43,4 +50,18 @@
     <string name="servingSizeUpdate">제공량 업데이트</string>
     <string name="addFood">음식 추가하기</string>
     <string name="addToMeal">식사에 추가</string>
+
+
+    <string name="message_delete_title">삭제 확인</string>
+    <string name="message_delete_content">%1$s을 삭제하시겠습니까?</string>
+    <string name="message_delete">삭제되었습니다.</string>
+    <string name="custom_add_food">음식 추가하기</string>
+    <string name="custom_add_food_info">음식을 자유롭게 추가하세요</string>
+    <string name="name">이름</string>
+    <string name="serving_size_g">기본 제공량(g)</string>
+    <string name="calorie_kcal">열량(kcal)</string>
+    <string name="carb_g">탄수화물(g)</string>
+    <string name="protein_g">단백질(g)</string>
+    <string name="fat_g">지방(g)</string>
+
 </resources>
