--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
 
 
     <string name="message_delete_title">삭제 확인</string>
-    <string name="message_delete_content">%1$s을 삭제하시겠습니까?</string>
+    <string name="message_delete_content">%1$s을 삭제하시겠습니까?\n(라이브러리에서 삭제됩니다)</string>
     <string name="message_delete">삭제되었습니다.</string>
     <string name="custom_add_food">음식 추가하기</string>
     <string name="custom_add_food_info">음식을 자유롭게 추가하세요</string>
