Refactor : checkBox와 FavoriteBtn 가시성 재설정 및 리팩토링

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="carb_g">탄수화물(g)</string>
     <string name="protein_g">단백질(g)</string>
     <string name="fat_g">지방(g)</string>
+    <string name="addFoodFromMealDetail">음식 추가하기</string>
 
 </resources>
