--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,13 @@
     <string name="message_delete_title">삭제 확인</string>
     <string name="message_delete_content">%1$s을 삭제하시겠습니까?</string>
     <string name="message_delete">삭제되었습니다.</string>
+    <string name="message_meal_update">식사가 업데이트 되었습니다.</string>
+    <string name="message_meal_save">식사가 저장되었습니다.</string>
+    <string name="message_meal_add">식사가 추가되었습니다.</string>
+    <string name="message_input_voice">음성을 입력해주세요.</string>
+    <string name="message_input_voice_error">음성 입력에 실패했습니다.</string>
+
+
     <string name="custom_add_food">음식 직접 추가하기</string>
     <string name="custom_add_food_info">음식을 자유롭게 추가하세요</string>
     <string name="name">이름</string>
@@ -64,6 +71,6 @@
     <string name="protein_g">단백질(g)</string>
     <string name="fat_g">지방(g)</string>
     <string name="addFoodFromMealDetail">음식 추가하기</string>
-    
     <string name="check_item_count">%1$d개 추가하기</string>
+
 </resources>
